--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,71 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+body{
+    background-image: url(https://www.iwantwallpaper.co.uk/images/debona-chantilly-triangle-geo-smooth-modern-marble-pastel-colour-metallic-pink-grey-wallpaper-p5409-14991_zoom.jpg);
+}
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header{
+    flex-flow: column nowrap;
+    height: 100px;
+    background-color: rgb(245, 202, 209);
+    margin-bottom: 20px;
+}
+
+.container{
+    padding: 30px;
+    box-sizing: border-box;
+    flex-flow: column nowrap;
+    width: 350px;
+    height: 500px;
+    border: 3px solid rgb(245, 202, 209);
+    border-radius: 10px;
+    background-color: white;
+}
 button{
-    background-color: black;
+    background-color: darkred;
+    border: none;
     color: white;
+    font-weight: bold;
+    height: 40px;
+    width: 100px;
+    border-radius: 5px;
+}
+
+.form-cont{
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    margin-top: 50px;
+}
+label{
+    color: darkred;
+    font-weight: bold;
+}
+.input-cont{
+    width: 90%;
+    height: 40px;
+    margin-bottom: 30px;
+    margin-top: 10px;
+    border: none;
+    border-bottom: 2px solid darkred;
+    border-radius: 5px;
+}
+
+p{
+    margin-top: 30px;
+    font-family: 'Luxurious Roman', cursive;
+}
+
+h2{
+    text-align: center;
 }
